--- a/style.css
+++ b/style.css
@@ -5,4 +5,113 @@
   scroll-behavior: smooth;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.main-section {
+  width: 100%;
+  height: 100vh;
+}
+.main-section aside {
+  width: 250px;
+  height: 100%;
+  background-color: #333;
+}
+.main-section aside .user-info {
+  width: 100%;
+  height: 100px;
+  top: 0;
+  border-bottom: 1px solid #555;
+}
+.main-section aside .user-info .user-container {
+  inset: 10px;
+}
+.main-section aside .user-info .user-container .image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  left: 20%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ccc;
+}
+.main-section aside .user-info .user-container .image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.main-section aside .user-info .user-container .info {
+  left: 60%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 120px;
+  height: 40px;
+  background-color: #ccc;
+}
+.main-section aside .others {
+  bottom: 0;
+  width: 100%;
+  height: calc(100% - 100px);
+}
+.main-section aside .others .part-1 {
+  width: 100%;
+  height: 200px;
+  background-color: blueviolet;
+}
+.main-section aside .others .part-1 .title {
+  left: 50%;
+  top: 15%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  height: 20%;
+  background-color: gold;
+  color: #777;
+}
+.main-section aside .others .part-1 .category {
+  width: 100%;
+  height: 72%;
+  bottom: 0;
+  background-color: goldenrod;
+}
+.main-section aside .others .part-1 .category .option {
+  width: 100%;
+  height: 40px;
+  background-color: burlywood;
+  margin: 10px 0;
+}
+.main-section aside .others .part-2 {
+  width: 100%;
+  height: 200px;
+  background-color: violet;
+  top: 40%;
+}
+.main-section aside .others .part-2 .title {
+  left: 50%;
+  top: 15%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  height: 20%;
+  background-color: gold;
+  color: #777;
+}
+.main-section aside .others .part-2 .category {
+  width: 100%;
+  height: 72%;
+  bottom: 0;
+  background-color: goldenrod;
+}
+.main-section aside .others .part-2 .category .option {
+  width: 100%;
+  height: 40px;
+  background-color: burlywood;
+  margin: 10px 0;
+}
+.main-section aside .others .part-3 {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
+  top: 80%;
 }/*# sourceMappingURL=style.css.map */
