--- a/style.scss
+++ b/style.scss
@@ -7,3 +7,112 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+a {
+    text-decoration: none;
+}
+
+.main-section {
+    width: 100%;
+    height: 100vh;
+    aside {
+        width: 250px;
+        height: 100%;
+        background-color: #333;
+        .user-info {
+            width: 100%;
+            height: 100px;
+            top: 0;
+            border-bottom: 1px solid #555;
+            .user-container {
+                inset: 10px;
+                .image {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    left: 20%;
+                    top: 50%;
+                    transform: translate(-50% , -50%);
+                    background-color: #ccc;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 50%;
+                    }
+                }
+                .info {
+                    left: 60%;
+                    top: 50%;
+                    transform: translate(-50% , -50%);
+                    width: 120px;
+                    height: 40px;
+                    background-color: #ccc;
+                }
+            }
+        }
+        .others {
+            bottom: 0;
+            width: 100%;
+            height: calc(100% - 100px);
+            // background-color: blue;
+            .part-1 {
+                width: 100%;
+                height: 200px;
+                background-color: blueviolet;
+                .title {
+                    left: 50%;
+                    top: 15%;
+                    transform: translate(-50% , -50%);
+                    width: 90%;
+                    height: 20%;
+                    background-color: gold;
+                    color: #777;
+                }
+                .category {
+                    width: 100%;
+                    height: 72%;
+                    bottom: 0;
+                    background-color: goldenrod;
+                    .option {
+                        width: 100%;
+                        height: 40px;
+                        background-color: burlywood;
+                        margin: 10px 0;
+                    }
+                }
+            }
+            .part-2 {
+                width: 100%;
+                height: 200px;
+                background-color: violet;
+                top: 40%;
+                .title {
+                    left: 50%;
+                    top: 15%;
+                    transform: translate(-50% , -50%);
+                    width: 90%;
+                    height: 20%;
+                    background-color: gold;
+                    color: #777;
+                }
+                .category {
+                    width: 100%;
+                    height: 72%;
+                    bottom: 0;
+                    background-color: goldenrod;
+                    .option {
+                        width: 100%;
+                        height: 40px;
+                        background-color: burlywood;
+                        margin: 10px 0;
+                    }
+                }
+            }
+            .part-3 {
+                width: 100%;
+                height: 100px;
+                background-color: blue;
+                top: 80%;
+            }
+        }
+    }
+}
