--- a/style.css
+++ b/style.css
@@ -15,6 +15,31 @@ a {
   width: 100%;
   height: 100vh;
 }
+.main-section .container {
+  width: calc(100% - 250px);
+  right: 0;
+  height: 100%;
+}
+.main-section .container header {
+  width: 100%;
+  height: 60px;
+}
+.main-section .container header .logo {
+  color: #222;
+  font-size: 30px;
+}
+.main-section .container header button {
+  color: #fff;
+  background-color: rgb(0, 89, 255);
+  border-radius: 10px;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+.main-section .container header button:hover {
+  background-color: gold;
+  color: #000;
+  transform: scale(1.1);
+}
 .main-section aside {
   width: 250px;
   height: 100%;
@@ -49,7 +74,7 @@ a {
   transform: translate(-50%, -50%);
   width: 120px;
   height: 40px;
-  background-color: #ccc;
+  color: #fff;
 }
 .main-section aside .others {
   bottom: 0;
@@ -59,7 +84,6 @@ a {
 .main-section aside .others .part-1 {
   width: 100%;
   height: 200px;
-  background-color: blueviolet;
 }
 .main-section aside .others .part-1 .title {
   left: 50%;
@@ -67,25 +91,31 @@ a {
   transform: translate(-50%, -50%);
   width: 90%;
   height: 20%;
-  background-color: gold;
   color: #777;
+  font-size: 20px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .main-section aside .others .part-1 .category {
   width: 100%;
   height: 72%;
   bottom: 0;
-  background-color: goldenrod;
 }
 .main-section aside .others .part-1 .category .option {
   width: 100%;
-  height: 40px;
-  background-color: burlywood;
-  margin: 10px 0;
+  height: 50px;
+  color: whitesmoke;
+  cursor: pointer;
+  border-bottom: 1px solid #555;
+}
+.main-section aside .others .part-1 .category .option:hover {
+  background-color: #444;
 }
 .main-section aside .others .part-2 {
   width: 100%;
   height: 200px;
-  background-color: violet;
   top: 40%;
 }
 .main-section aside .others .part-2 .title {
@@ -94,24 +124,65 @@ a {
   transform: translate(-50%, -50%);
   width: 90%;
   height: 20%;
-  background-color: gold;
   color: #777;
+  font-size: 20px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .main-section aside .others .part-2 .category {
   width: 100%;
   height: 72%;
   bottom: 0;
-  background-color: goldenrod;
 }
 .main-section aside .others .part-2 .category .option {
   width: 100%;
-  height: 40px;
-  background-color: burlywood;
-  margin: 10px 0;
+  height: 50px;
+  color: whitesmoke;
+  border-bottom: 1px solid #555;
+  cursor: pointer;
+}
+.main-section aside .others .part-2 .category .option:hover {
+  background-color: #444;
 }
 .main-section aside .others .part-3 {
   width: 100%;
   height: 100px;
-  background-color: blue;
   top: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main-section aside .others .part-3 button {
+  border-radius: 10px;
+  background-color: rgb(0, 110, 255);
+  color: #fff;
+  letter-spacing: 0.5px;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+.main-section aside .others .part-3 button:hover {
+  background-color: yellow;
+  color: #000;
+  transform: scale(1.1);
+}
+
+@media (max-width: 620px) {
+  .main-section aside {
+    width: 200px;
+  }
+  .main-section aside .user-info .user-container .image {
+    width: 40px;
+    height: 40px;
+  }
+  .main-section aside .user-info .user-container .info {
+    left: 65%;
+  }
+  .main-section .container header .logo {
+    font-size: 25px;
+  }
+  .main-section .container header button {
+    width: 120px;
+  }
 }/*# sourceMappingURL=style.css.map */
